src/components/modules/MapSection/MapSection.module.scss
@import "src/styles/bp";
.MapSection {
  padding-top: 40px;
  .sectionWrap {
    max-width: 1240px;
    margin: 0 auto;
    @include sm {
      max-width: 90%;
    }
    .mapWrap {
      margin-top: 80px;
      display: flex;
      flex-flow: row;
      @include sm {
        margin-top: 0;
      }
      .mapLocWrap {
        @include sm {
          display: none;
        }
        flex-basis: 350px;
        position: relative;
        .mapLocs {
          position: relative;
          padding: 40px 40px 40px 125px;
          width: 335px;
          left: -120px;
          background: #fff4f4;
          border-radius: 20px;
          .LocsWrap {
            position: relative;
            height: 586px;
            overflow-x: hidden;
            overflow-y: scroll;
            &:hover {
              &::-webkit-scrollbar {
                background: rgba(0, 0, 0, 0.25);
                width: 10px;
                transition: 0.2s;
                border-radius: 5px;
              }
              &::-webkit-scrollbar-thumb {
                background: rgba(0, 0, 0, 0.5);
                margin: 0 1px;
                border-radius: 3px;
              }
            }
            ul {
              list-style: none;
              padding: 0;
              li {
                font-size: 16px;
                line-height: 1.5;
                border-bottom: 1px solid #f3e1e1;
                button {
                  font-size: 16px;
                  width: 100%;
                  text-align: left;
                  text-decoration: none;
                  border: none;
                  background: none;
                  color: #444;
                  padding: 8px;
                  margin: 0;
                  display: block;
                  cursor: pointer;
                  &:hover {
                    background: rgba(0, 0, 0, 0.05);
                  }
                }
              }
            }
          }
        }
      }
      .mapSvgWrap {
        position: relative;
        flex-grow: 1;
        .MapPins {
          position: absolute;
          left: -120px;
          @include sm {
            position: relative;
            left: 0;
          }
          &.activeMapPins {
            .pin {
              opacity: 0.4;
            }
          }
          .pin {
            position: absolute;
            border: none;
            background: none;
            z-index: 2;
            opacity: 1;
            filter: grayscale(0%);
            cursor: pointer;
            &:hover {
              opacity: 1;
            }
            &.active {
              opacity: 1;
            }
            img {
              position: absolute;
              left: 0;
              top: 0;
              z-index: 2;
            }
          }
        }
        .mapCont {
          position: relative;
          left: -120px;
          top: -7px;
          @include sm {
            left: 0;
            svg {
              width: 100% !important;
            }
          }
        }
        .LocInfo {
          position: absolute;
          width: 300px;
          height: 190px;
          top: 0px;
          left: auto;
          right: 170px;
          box-shadow: 0px 0px 20px #eee;
          opacity: 0;
          overflow: hidden;
          max-height: 0;
          transition: all 0.3s;
          @include sm {
            position: relative;
            right: 0;
            width: 100%;
            margin-bottom: 20px;
          }
          &.activeInfo {
            opacity: 1;
            max-height: 100vh;
          }
          .info {
            position: absolute;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            .head {
              height: 28px;
              padding: 0;
              button {
                border: none;
                background: none;
                position: absolute;
                top: 10px;
                right: 3px;
                cursor: pointer;
                z-index: 1200;
                &::before,
                &::after {
                  content: "";
                  position: absolute;
                  height: 1px;
                  width: 100%;
                  top: 50%;
                  left: 0;
                  margin-top: -1px;
                  background: #000;
                }
                &::before {
                  transform: rotate(45deg);
                }
                &::after {
                  transform: rotate(-45deg);
                }
              }
            }
            .content {
              padding: 0 15px 15px 15px;
              box-sizing: border-box;
              h5 {
                margin-block: 0 10px;
                line-height: 1.2em;
                font-size: 20px;
              }
            }
          }
        }
      }
    }
    .Cta {
      padding-block: 60px 20px;
      @include sm {
        padding-block: 0 20px;
        a {
          font-size: 13px;
        }
      }
    }
  }
}

